[package]
name = "punchtop"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]

[build-dependencies]
protobuf-codegen-pure = "2"

[dependencies]
byteorder = "1"
bytes = "*"
env_logger = "0.6.0"
floating-duration = "0.1.2"
futures = "0.1"
futures-locks = "0.2"
hostname = "^0.1"
log = "0.4.0"
mdns = "*"
mp3-duration = "*"
native-tls = "*"
neguse-types = { git = "https://github.com/SilverEzhik/neguse-types" }
neguse-taglib = { git = "https://github.com/SilverEzhik/neguse-taglib" }
nom = "4"
objc = "*"
openssl = "*"
protobuf = "~2"
rand = "*"
rodio = "*"
rouille = "*"
serde = "*"
serde_derive = "*"
serde_json = "1.0"
tokio = "*"
tokio-tls = "*"
tree_magic = "*"
url = "*"
walkdir = "2"
