[package]
name = "punchtop-audio"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
keywords = ["audio", "chromecast"]
categories = ["multimedia::audio"]
license = "MIT"

[dependencies]
base64 = "0.10"
floating-duration = "0.1"
futures = "0.1"
log = "0.4"
mdns = "0.3"
nom = "4"
rand = "0.6"
rocket = "0.4.0"
url = "1"

[dependencies.cast-client]
path = "../cast-client"
