[package]
name = "punchtop-playlist"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"

[dependencies]
directories = "1"
elapsed = "0.1"
log = "0.4"
mp3-duration = "0.1"
mp4parse = "0.11"
rand = "0.6"
tree_magic = "0.2"
walkdir = "2"

[dependencies.neguse-taglib]
git = "https://github.com/SilverEzhik/neguse-taglib"

[dependencies.punchtop-audio]
path = "../punchtop-audio"
